--- a/style.css
+++ b/style.css
@@ -246,10 +246,10 @@ opacity: 0.5!important;
 
 /* // Medium devices (tablets, less than 992px) */
 @media screen and(max-width: 991.98px) { 
-  #AppClientTaskPanel{
+  /* #AppClientTaskPanel{
     margin: 5% 24%!important;
     width: 50%!important;
-  }
+  } */
  }
 
 
