--- a/style.css
+++ b/style.css
@@ -123,7 +123,6 @@ h1, h2, h3, h4, h5, h6 {
 .field {
   border: 1px solid #dcdcdcdd!important;
   background: #E0F2F1!important;
-  color: #263238!important;
   vertical-align: middle!important;
   text-align: center!important;
   padding: 15px!important;
@@ -177,7 +176,8 @@ h1, h2, h3, h4, h5, h6 {
   background: #ffffff !important;
   margin: 0 auto !important;
   border-radius: 3px!important;
-  border-left: 3px solid #cecece !important;
+  border: 3px solid #cecece !important;
+  box-shadow: 0px 0px 7px 1px #ddd !important;
 }
 
 #questionDisplay div:nth-child(2){
@@ -237,38 +237,18 @@ opacity: 0.5!important;
 
 
 /* // Small devices (landscape phones, less than 768px) */
-@media screen and(max-width: 767.98px) { 
+@media screen and(max-width: 1199.98px)) { 
+  body{
+    font-size: 30px!important;
+  }
   .field{
     width: 5em !important;
     height: 5em!important;
   }
-}
-
-/* // Medium devices (tablets, less than 992px) */
-@media screen and(max-width: 991.98px) { 
-  /* #AppClientTaskPanel{
-    margin: 5% 24%!important;
-    width: 50%!important;
-  } */
- }
-
-
-/* // Large devices (desktops, less than 1200px) */
-@media screen and(max-width: 1199.98px) { 
-  body{
-    font-size: 30px!important;
+  #innerCrossword .filled{
+    padding: 3px !important;
   }
-  .field {
-    padding: 0.25em !important;
-  }
-  #AppClientTaskPanel{
-    /* margin: 5% 38%!important;
-    width: 25%!important;
-    padding: 40px!important;
-    box-shadow: none!important;
-    font-size: 18px!important; */
-  }  
-    #crossword {
-      margin: 5% 0!important;
+  #crossword {
+    margin: 15% 0!important;
   }
 }
