--- a/style.css
+++ b/style.css
@@ -147,13 +147,14 @@ h1, h2, h3, h4, h5, h6 {
 
 #questionSidePanel{
   -webkit-box-shadow: none!important;
-          box-shadow: none!important;
+  box-shadow: none!important;
   border-radius: 8px!important;
   border: none!important;
-  background: #ffffff !important;
-  transform: translate(-50%, -50%);
-  margin-top: 20% !important;
-  width: 500px !important;
+  background: #fff!important;
+  width: 415px!important;
+  margin: 70px auto !important;
+  position: relative !important;
+  padding: 50px !important;
 }
 
 #questionSidePanel div{
@@ -234,8 +235,8 @@ opacity: 0.5!important;
 }
 
 .blink {
-  -webkit-box-shadow: 0px 0px 0px 2px rgb(0, 173, 130)!important;
-          box-shadow: 0px 0px 0px 2px rgb(0, 173, 130)!important; 
+  -webkit-box-shadow: 0px 0 5px 1.5px rgb(0, 173, 130)!important;
+          box-shadow: 0px 0 5px 1.5px rgb(0, 173, 130)!important; 
 }
 
 #checkSolutionBtn{
@@ -253,10 +254,10 @@ opacity: 0.5!important;
     width: 3.5em !important;
     height: 3.5em!important;
   }
-  ##AppClientTaskPanel{
+  /* #AppClientTaskPanel{
     margin: 5% 15%!important;
     width: 70% !important;
-  }
+  } */
 }
 
 @media screen and (min-width: 40.5em) { 
