--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 415px!important;
   margin: 70px auto !important;
   position: relative !important;
-  padding: 50px !important;
+  left: 0 !important;
 }
 
 #questionSidePanel div{
@@ -164,6 +164,8 @@ h1, h2, h3, h4, h5, h6 {
 #questionSidePanel div:nth-child(1){
   border-radius: 8px!important;
   border: none!important;
+  left: 0 !important;
+    width: 415px!important;
 
 }
 
