--- a/style.css
+++ b/style.css
@@ -145,9 +145,10 @@ h1, h2, h3, h4, h5, h6 {
   border: none!important;
   background: #fff!important;
   width: 415px!important;
-  margin: 70px auto !important;
+  margin: 0 auto 0 !important;
   position: relative !important;
   left: 0 !important;
+  top: 80px !important
 }
 
 #questionSidePanel div{
@@ -157,9 +158,6 @@ h1, h2, h3, h4, h5, h6 {
 #questionSidePanel div:nth-child(1){
   border-radius: 8px!important;
   border: none!important;
-  left: 0 !important;
-    width: 415px!important;
-
 }
 
 #questionSidePanel div:nth-child(2) img{
