--- a/style.css
+++ b/style.css
@@ -144,11 +144,11 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 8px!important;
   border: none!important;
   background: #fff!important;
-  width: 415px!important;
+  width: 45%!important;
   margin: 0 auto 0 !important;
   position: relative !important;
   left: 0 !important;
-  top: 80px !important
+  top: 20px !important
 }
 
 #questionSidePanel div{
@@ -183,7 +183,7 @@ h1, h2, h3, h4, h5, h6 {
   background: #fff!important;
   margin: 0px auto!important;
   border-radius: 3px!important;
-  border: 2px solid #9a9a9a;
+  border: 2px inset rgb(249 249 249);
 }
 
 #questionDisplay div:nth-child(2){
@@ -193,7 +193,6 @@ h1, h2, h3, h4, h5, h6 {
 #questionDisplay b{
   text-align: center!important;
   display: block!important;
-  padding: 20px 0 0 !important;
   font-size: 20px!important;
 } 
 
@@ -202,12 +201,12 @@ h1, h2, h3, h4, h5, h6 {
   background: #fff!important;
   border: 3px solid #1de9b6!important;
   height: 50px !important;
-  border-radius: 8px !important;
+  border-radius: 2px solid #c1c1c1!important;
   padding: 10px !important;
-  -webkit-border-radius: 8px !important;
-  -moz-border-radius: 8px !important;
-  -ms-border-radius: 8px !important;
-  -o-border-radius: 8px !important;
+  -webkit-border-radius: 2px solid #c1c1c1!important;
+  -moz-border-radius: 2px solid #c1c1c1!important;
+  -ms-border-radius: 2px solid #c1c1c1!important;
+  -o-border-radius: 2px solid #c1c1c1!important;
 }
 
 #questionDisplay input[type=button]{
@@ -228,24 +227,21 @@ opacity: 0.5!important;
 }
 
 .blink {
-  -webkit-box-shadow: 0px 0 5px 1.5px rgb(0, 173, 130)!important;
-          box-shadow: 0px 0 5px 1.5px rgb(0, 173, 130)!important; 
+  -webkit-box-shadow: 0 0 0px 3px #1de9b6!important;
+          box-shadow: 0 0 0px 3px #1de9b6!important; 
 }
 
 #checkSolutionBtn{
-  background: rgb(239 255 220)!important;
-  box-shadow: 1px 1px 1px #dddd!important;
-  color: #78be20!important;
-  border: 4px solid #78be20!important;
-}
-#checkSolutionBtn:hover{
-  opacity: 0.5!important;
+  display: none !important;
 }
 /* ************Responsive*************** */
 @media screen and (min-width: 28.75em) {
   .field{
     width: 2.5em !important;
     height: 2.5em!important;
+  }
+  #questionSidePanel{
+    width: 100%;
   }
 }
 
