--- a/style.css
+++ b/style.css
@@ -147,7 +147,6 @@ h1, h2, h3, h4, h5, h6 {
 
 #questionSidePanel div{
   opacity: 1 !important;
-  height: 100vh;
 }
 
 #questionSidePanel div:nth-child(1){
@@ -168,6 +167,7 @@ h1, h2, h3, h4, h5, h6 {
   border:1px solid #b0afaf!important;
   border-radius: 8px!important;
   padding: 20px 50px!important;
+  height: 100vh!important;
 } 
 
 .inputElement{
@@ -179,18 +179,21 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0px auto!important;
   border-radius: 3px!important;
   border: 2px inset rgb(249 249 249) !important;
+  max-height: 200px;
+  width: 200px;
 }
 
 #questionDisplay div:nth-child(2){
   height: 50px!important;
 }
 
-#questionDisplay b:nth-child(2){
+#questionDisplay b{
+  display: block!important;
   text-align: center!important;
   font-size: 20px!important;
 } 
 
-#questionDisplay b:nth-child(2){
+#questionDisplay b:last-child{
   display: none!important;
 } 
 
@@ -233,8 +236,10 @@ opacity: 0.5!important;
 
 
 #checkSolutionBtn{
+  display: none !important;
 }
 #AppClientTaskButton a img{
+  display: none !important;
 }
 /* ************Responsive*************** */
 @media screen and (min-width: 28.75em) {
