--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 50px!important;
 }
 
-#questionDisplay b{
+#questionDisplay b:first-child{
   display: block!important;
   text-align: center!important;
   font-size: 20px!important;
