--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 20px!important;
 } 
 
-#questionDisplay b:last-child{
+#questionDisplay b:nth-child(2){
   display: none!important;
 } 
 
