--- a/style.css
+++ b/style.css
@@ -191,7 +191,11 @@ h1, h2, h3, h4, h5, h6 {
   display: block!important;
   text-align: center!important;
   font-size: 20px!important;
-} 
+}
+
+#questionDisplay br{
+  display: none !important;
+}
 
 #questionDisplay b:nth-child(2){
   display: none!important;
